add support for user rsync options, detect dry-run
custom rsync-options may not be given in configuration files (see
example configuration files)
If dry-run is given, do not create symlinks (which later on cause backup
problems due to non-existing link targets)

--- a/examples/local.config
+++ b/examples/local.config
@@ -1,3 +1,5 @@
 SOURCES=(/tmp/source)
 # on the target machine
 TARGET=/tmp/target
+# custom rsync options
+RSYNCOPTS=( --dry-run --exclude=/tmp/source/*.log )
